# SimpleSatSolver

./: CMakeLists.txt  README.md  sss.cpp
